added visual result of the play

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -6,7 +8,35 @@
 
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.choise {
+  padding: 10px;
+  text-align: center;
+}
+
+.result {
+  padding: 10px;
+  text-align: center;
+}
+
+button {
+  width: 60px;
+  height: 60px;
+  font-size: 30px;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px;
 }
