--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ body {
   align-items: center;
 }
 
+.total-result {
+  font-size: 72px;
+  color: red;
+}
+
+.current-score {
+  font-size: 50px;
+}
+
 .choise {
   padding: 10px;
   text-align: center;
